update versions