@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<!-- FIXME - set group id -->
 	<groupId>no.uib.ii.inf112</groupId>
 	<!-- FIXME - set artifact name -->
 	<artifactId>gdx-template-26v</artifactId>
-	<version>1.0-SNAPSHOT</version>
+	<version>1.26-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<!-- FIXME - set app name -->
 	<name>gdx-app</name>
@@ -14,11 +16,12 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.release>25</maven.compiler.release>
-		<libgdx.version>1.13.1</libgdx.version>
-		<slf4j.version>2.0.16</slf4j.version>
+		<libgdx.version>1.14.0</libgdx.version>
+		<slf4j.version>2.0.17</slf4j.version>
+		<junit.version>6.0.2</junit.version>
 		<!-- FIXME - set to app's main class' -->
 		<main.class>inf112.skeleton.app.MvcMain</main.class>
-		<jvm.extra.args></jvm.extra.args>
+		<jvm.extra.args>--enable-native-access=ALL-UNNAMED</jvm.extra.args>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -77,7 +80,7 @@
 			<!-- Mocking framework for unit tests: https://site.mockito.org/ -->
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-core</artifactId>
-			<version>5.15.2</version>
+			<version>5.21.0</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -99,7 +102,7 @@
 				<!-- defines versions for JUnit dependencies -->
 				<groupId>org.junit</groupId>
 				<artifactId>junit-bom</artifactId>
-				<version>5.11.4</version>
+				<version>${junit.version}</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
@@ -128,15 +131,18 @@
 						</goals>
 						<configuration>
 							<transformers>
-								<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+								<transformer
+									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
 									<manifestEntries>
 										<Main-Class>${main.class}</Main-Class>
 									</manifestEntries>
 								</transformer>
-								<transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
+								<transformer
+									implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
 							</transformers>
 							<artifactSet></artifactSet>
-							<outputFile>${project.build.directory}/${project.artifactId}-${project.version}-fat.jar</outputFile>
+							<outputFile>
+								${project.build.directory}/${project.artifactId}-${project.version}-fat.jar</outputFile>
 						</configuration>
 					</execution>
 				</executions>
@@ -199,49 +205,68 @@
 			<!-- lock down plugins versions to avoid using Maven defaults  -->
 			<plugins>
 				<plugin>
-					<groupId>org.jacoco</groupId>
-					<artifactId>jacoco-maven-plugin</artifactId>
-					<version>0.8.12</version>
+					<artifactId>maven-clean-plugin</artifactId>
+					<version>3.5.0</version>
+				</plugin>
+				<plugin>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<version>3.15.0</version>
+				</plugin>
+				<plugin>
+					<artifactId>maven-deploy-plugin</artifactId>
+					<version>3.1.4</version>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-enforcer-plugin</artifactId>
-					<version>3.5.0</version>
+					<version>3.6.2</version>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-shade-plugin</artifactId>
-					<version>3.6.0</version>
-				</plugin>
-				<plugin>
-					<artifactId>maven-clean-plugin</artifactId>
-					<version>3.4.0</version>
-				</plugin>
-				<plugin>
-					<artifactId>maven-site-plugin</artifactId>
-					<version>4.0.0-M16</version>
-				</plugin>
-				<plugin>
-					<artifactId>maven-project-info-reports-plugin</artifactId>
-					<version>3.8.0</version>
-				</plugin>
-				<plugin>
-					<artifactId>maven-resources-plugin</artifactId>
-					<version>3.3.1</version>
-				</plugin>
-				<plugin>
-					<artifactId>maven-compiler-plugin</artifactId>
-					<version>3.13.0</version>
-				</plugin>
-				<plugin>
-					<artifactId>maven-surefire-plugin</artifactId>
-					<version>3.5.2</version>
+					<artifactId>maven-failsafe-plugin</artifactId>
+					<version>3.5.4</version>
 					<configuration>
 						<!-- enable Open Test Reporting output -->
 						<properties>
 							<configurationParameters>
 								junit.platform.reporting.open.xml.enabled = true
-								junit.platform.reporting.output.dir = target/surefire-reports
+								junit.platform.reporting.output.dir =
+								target/failsafe-reports
+							</configurationParameters>
+						</properties>
+					</configuration>
+				</plugin>
+				<plugin>
+					<artifactId>maven-install-plugin</artifactId>
+					<version>3.1.4</version>
+				</plugin>
+				<plugin>
+					<artifactId>maven-jar-plugin</artifactId>
+					<version>3.5.0</version>
+				</plugin>
+				<plugin>
+					<artifactId>maven-project-info-reports-plugin</artifactId>
+					<version>3.9.0</version>
+				</plugin>
+				<plugin>
+					<artifactId>maven-resources-plugin</artifactId>
+					<version>3.4.0</version>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-shade-plugin</artifactId>
+					<version>3.6.1</version>
+				</plugin>
+				<plugin>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>3.5.4</version>
+					<configuration>
+						<!-- enable Open Test Reporting output -->
+						<properties>
+							<configurationParameters>
+								junit.platform.reporting.open.xml.enabled = true
+								junit.platform.reporting.output.dir =
+								target/surefire-reports
 							</configurationParameters>
 						</properties>
 						<!-- ignore Java module system while testing -->
@@ -250,53 +275,39 @@
 					</configuration>
 				</plugin>
 				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-failsafe-plugin</artifactId>
-					<version>3.5.2</version>
-					<configuration>
-						<!-- enable Open Test Reporting output -->
-						<properties>
-							<configurationParameters>
-								junit.platform.reporting.open.xml.enabled = true
-								junit.platform.reporting.output.dir = target/failsafe-reports
-							</configurationParameters>
-						</properties>
-					</configuration>
-				</plugin>
-				<plugin>
-					<artifactId>maven-jar-plugin</artifactId>
-					<version>3.4.2</version>
-				</plugin>
-				<plugin>
-					<artifactId>maven-install-plugin</artifactId>
-					<version>3.1.3</version>
-				</plugin>
-				<plugin>
-					<artifactId>maven-deploy-plugin</artifactId>
-					<version>3.1.3</version>
-				</plugin>
-				<plugin>
 					<groupId>org.codehaus.mojo</groupId>
 					<artifactId>exec-maven-plugin</artifactId>
-					<version>3.5.0</version>
+					<version>3.6.3</version>
 				</plugin>
 				<plugin>
 					<groupId>org.codehaus.mojo</groupId>
 					<artifactId>versions-maven-plugin</artifactId>
-					<version>2.18.0</version>
+					<version>2.21.0</version>
 					<configuration>
-						<!-- don't notify us about new alpha/beta/milestone versions -->
-						<!-- you can check for updated plugins and dependencies by running: -->
+						<!-- don't notify us about new alpha/beta/milestone
+						versions -->
+						<!-- you can check for updated plugins and dependencies
+						by running: -->
 						<!--   mvn versions:display-plugin-updates versions:display-property-updates versions:display-dependency-updates -->
 						<ruleSet>
 							<ignoreVersions>
 								<ignoreVersion>
 									<type>regex</type>
-									<version>(.+-SNAPSHOT|.+-M\d|.+-alpha.*|.+-beta.*)</version>
+									<version>
+										(.+-SNAPSHOT|.+-M\d+|.+-alpha.*|.+-beta.*)</version>
 								</ignoreVersion>
 							</ignoreVersions>
 						</ruleSet>
 					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>org.jacoco</groupId>
+					<artifactId>jacoco-maven-plugin</artifactId>
+					<version>0.8.14</version>
+				</plugin>
+				<plugin>
+					<artifactId>maven-site-plugin</artifactId>
+					<version>3.21.0</version>
 				</plugin>
 			</plugins>
 		</pluginManagement>
